Added some simple noscript messaging for the map and timeline interface. (Tested with JavaScript turned off.)

--- a/_source/index.html
+++ b/_source/index.html
@@ -48,14 +48,17 @@
 <body>
     <h1>{{ data_title }}</h1>
 
-    <div id="map-container"></div>
+    <div id="map-container"><noscript>
+        <p>An interactive map resides here.</p>
+    </noscript></div>
 
     <div id="stepper">
         <a href="#" id="step-prev">&laquo;</a>
         <h2></h2>
         <p></p>
-        <a href="#" id="step-next">&raquo;</a>
-    </div>
+        <a href="#" id="step-next">&raquo;</a><noscript>
+        <p>An interactive timeline tool resides here.</p>
+    </noscript></div>
 
     <div class="itinerary">
         <!--
