A bunch more design & UI tweaks

--- a/_source/index.html
+++ b/_source/index.html
@@ -70,6 +70,7 @@
              Note that the HTML structure here is dependent on the structure of the data.
              Some data has different fields/schema.
         -->
+        <h2>The Data</h2>
         {% for year in events %}
         <table border="0" cellpadding="0" cellspacing="0">
             <tr>
