Styles fix for prev/next links

--- a/_source/index.html
+++ b/_source/index.html
@@ -66,7 +66,8 @@
         <noscript>
             <p>An interactive timeline tool resides here.</p>
         </noscript>
-        <a href="#" id="step-next">&raquo;</a></div>
+        <a href="#" id="step-next">&raquo;</a>
+    </div>
     <div class="itinerary">
         <!--
              Stick to rendering Itinerary data in HTML with Jekyll despite other JS dependencies
