--- a/_source/index.html
+++ b/_source/index.html
@@ -79,12 +79,12 @@
         -->
         <h2>The Data</h2>
         {% for year in events %}
-        <table border="0" cellpadding="0" cellspacing="0">
+        <table border="0" cellpadding="0" cellspacing="0" class="year">
             <tr>
                 <th><h3>{{ year.name }}</h3></th>
             </tr>
         </table>
-        <table border="0" cellpadding="0" cellspacing="0" width="100%" class="responsive">
+        <table border="0" cellpadding="0" cellspacing="0" width="100%" class="responsive data">
             <tr>
                 <th width="8%">Date</th>
                 <th width="12%">Parish</th>
