Added Buried Parish to stepper in red.

--- a/_source/index.html
+++ b/_source/index.html
@@ -58,10 +58,11 @@
             <a href="{{ link.link-href }}">{{ link.link-name }}
             {% endfor %}
         </div>
-
-        <div id="map-container"><noscript>
-            <p>An interactive map resides here.</p>
-        </noscript></div>
+    </div>
+    <div id="map-container"><noscript>
+        <p>An interactive map resides here.</p>
+    </noscript></div>
+    <div class="wrapper">
 
         <div id="stepper">
             <a href="#" id="step-prev">&laquo;</a>
