Added examples of location markers

--- a/_source/index.html
+++ b/_source/index.html
@@ -45,6 +45,9 @@
         // [variable] worked in Firefox, but halted the JS in Chrome
         var historic_toggle_label = 'London 1720';
         var modern_toggle_label = 'London 2015';
+
+        var map_center = [51.514, -0.0881481171];
+        var map_zoom = 14;
     </script>
 </head>
 
