--- a/_source/index.html
+++ b/_source/index.html
@@ -4,6 +4,7 @@
 <html lang="en">
 <head>
     {% assign data_title = "A &ldquo;Frightful Number&rdquo; &ndash; Mapping Daniel Defoe&rsquo;s A Journal of the Plague Year" %}
+    {% assign data_h1_title = "A &ldquo;Frightful Number&rdquo; &ndash; Mapping Daniel Defoe&rsquo;s <em>A Journal of the Plague Year</em>" %}
     <title>{{ data_title }}</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,7 +12,7 @@
     <link type="text/css" media="screen" rel="stylesheet" href="ui/css/styles.css" />
     <script type="text/javascript" src="https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js"></script>
     <link type="text/css" rel="stylesheet" href="https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css" media="all" />
-    <link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica|IM+Fell+DW+Pica+SC' rel='stylesheet' type='text/css'><!-- There's an italic font as well -->
+    <link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400,400Italic|IM+Fell+DW+Pica+SC' rel='stylesheet' type='text/css'><!-- There's an italic font as well -->
 
     <link type="text/css" media="screen" rel="stylesheet" href="ui/css/responsive-tables.css" />
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -56,7 +57,7 @@
         <img src="ui/img/drc.logo.horizontal.png" width="247" height="42" alt="Digital Research Center at Hofstra" />
     </div></div>
     <div class="wrapper">
-        <h1>{{ data_title }}</h1>
+        <h1>{{ data_h1_title }}</h1>
 
         <div class="nav">
             {% for link in site.data.nav %}
