Added italic font and updated formatting of title in page

--- a/_source/index.html
+++ b/_source/index.html
@@ -3,8 +3,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% assign data_title = "A &ldquo;Frightful Number&rdquo; &ndash; Mapping Daniel Defoe&rsquo;s A Journal of the Plague Year" %}
-    {% assign data_h1_title = "A &ldquo;Frightful Number&rdquo; &ndash; Mapping Daniel Defoe&rsquo;s <em>A Journal of the Plague Year</em>" %}
+    {% assign data_title = "A &ldquo;Frightful Number!&rdquo; &ndash; Mapping Daniel Defoe&rsquo;s A Journal of the Plague Year" %}
+    {% assign data_h1_title = "A &ldquo;Frightful Number!&rdquo; &ndash; Mapping Daniel Defoe&rsquo;s <em>A Journal of the Plague Year</em>" %}
     <title>{{ data_title }}</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
