--- a/_source/index.html
+++ b/_source/index.html
@@ -1,22 +1,10 @@
 ---
+page_nav: 'map-plague'
 ---
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% assign data_title = "A &ldquo;Frightful Number!&rdquo; &ndash; Mapping Daniel Defoe&rsquo;s A Journal of the Plague Year" %}
-    {% assign data_h1_title = "A &ldquo;Frightful Number!&rdquo; &ndash; Mapping Daniel Defoe&rsquo;s <em>A Journal of the Plague Year</em>" %}
-    <title>{{ data_title }}</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <link type="text/css" media="screen" rel="stylesheet" href="ui/css/styles.css" />
-    <script type="text/javascript" src="https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css" media="all" />
-    <link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400,400Italic|IM+Fell+DW+Pica+SC' rel='stylesheet' type='text/css'><!-- There's an italic font as well -->
-
-    <link type="text/css" media="screen" rel="stylesheet" href="ui/css/responsive-tables.css" />
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript" src="ui/js/responsive-tables.js"></script>
+{% include head.html %}
 
     <style type="text/css">
         /* Dynamically set up CSS styles for event data in the timeline based on corresponding parishes */
@@ -53,18 +41,7 @@
 </head>
 
 <body>
-    <div class="logo-header-wrapper"><div class="logo-header">
-        <img src="ui/img/drc.logo.horizontal.png" width="247" height="42" alt="Digital Research Center at Hofstra" />
-    </div></div>
-    <div class="wrapper">
-        <h1>{{ data_h1_title }}</h1>
-
-        <div class="nav">
-            {% for link in site.data.nav %}
-            <a href="{{ link.link-href }}">{{ link.link-name }}</a>
-            {% endfor %}
-        </div>
-    </div>
+{% include header.html %}
     <div id="map-container"><noscript>
         <p>An interactive map resides here.</p>
     </noscript></div>
@@ -79,6 +56,7 @@
             </noscript>
             <a href="#" id="step-next">&raquo;</a>
         </div>
+        <div class="timeline"></div>
         <div class="itinerary">
             <!--
                  Stick to rendering Itinerary data in HTML with Jekyll despite other JS dependencies
@@ -123,6 +101,6 @@
             {% endfor %}
         </div>
     </div>
-    <script type="text/javascript" src="ui/js/script.js"></script>
+{% include footer.html %}
 </body>
 </html>
